# livesplit-core

./: Cargo.toml
capi/: Cargo.toml
capi/bind_gen/: Cargo.toml
crates/livesplit-auto-splitting/: Cargo.toml
crates/livesplit-hotkey/: Cargo.toml
src/auto_splitting/: mod.rs
src/layout/: general_settings.rs  layout_state.rs  mod.rs
src/layout/parser/: mod.rs
src/rendering/: mod.rs
src/rendering/component/: splits.rs
src/rendering/default_text_engine/: mod.rs
src/run/: mod.rs
